--- a/Reading/css/allworks.css
+++ b/Reading/css/allworks.css
@@ -1,11 +1,11 @@
 /*图标*/
 @font-face {
   font-family: 'iconfont';  /* project id 870868 */
-  src: url('//at.alicdn.com/t/font_870868_dcseeoreua.eot');
-  src: url('//at.alicdn.com/t/font_870868_dcseeoreua.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_870868_dcseeoreua.woff') format('woff'),
-  url('//at.alicdn.com/t/font_870868_dcseeoreua.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_870868_dcseeoreua.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_870868_q2ka95ro0ti.eot');
+  src: url('//at.alicdn.com/t/font_870868_q2ka95ro0ti.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_870868_q2ka95ro0ti.woff') format('woff'),
+  url('//at.alicdn.com/t/font_870868_q2ka95ro0ti.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_870868_q2ka95ro0ti.svg#iconfont') format('svg');
 }
 .iconfont{
     font-family:"iconfont" !important;
@@ -77,6 +77,10 @@ ul,li{
 	
 	.fremaintime_major_l .book_info_major{
 		width: 360px !important;
+	}
+	
+	.rank_body_per.margin_right0{
+		margin-right: 30px !important;
 	}
 } 
 .worksmain a{
@@ -698,6 +702,7 @@ ul,li{
 	color: #ed4259;
 	font-weight: bold;
 	padding-left: 2px;
+	display: none;
 }
 .ranklist h4{
 	font-size: 14px;
@@ -707,10 +712,198 @@ ul,li{
 	color: #ed4259;
 	font-weight: bold;
 }
+.rank_act .ranktoright{
+	display:inline;
+}
 .ranklist_top {
-	border-bottom: 1px solid #e6e6e6;
-	padding-bottom: 15px;
+	/*border-bottom: 1px solid #e6e6e6;
+	padding-bottom: 15px;*/
+}
+.ranklist_all{
+	border-top: 1px solid #e6e6e6;
 }
 .ranklist_all li{
 	margin-bottom: 10px;
+}
+.rank_head h3{
+	margin-top: 0px;
+	margin-bottom: 15px;
+	font-weight: 400;
+}
+.rank_head h3 span{
+	font-size: 14px;
+	color: #666666;
+	margin-left: 12px;
+}
+.rank_head h3 a{
+	margin-top: 12px;
+	font-size: 12px;
+}
+.rank_main_head ul li a{
+	padding: 4px 7px !important; 
+}
+.rank_head_act a{
+	color: #ed4259 !important;
+	font-weight: bold;
+}
+.rank_body_per{
+	width: 216px;
+	margin-right: 30px;
+	float: left;
+	height: 450px;
+}
+.margin_right0{
+	margin-right: 0px !important;
+}
+.rank_body_per h4{
+	font-size: 18px;
+	line-height: 25px;
+	margin: 0px;
+	padding-bottom: 4px;
+}
+.rank_body_per_more{
+	color: ##3f5a93;
+	font-size: 12px;
+	margin-left: 10px;
+}
+.rank_book_list ul li{
+	height: 31px;
+	margin: 0px;
+	padding: 0px;
+}
+.rank_book_list ul .top1{
+	height: 110px;
+  padding-top: 14px;
+  border-top: 1px solid #666666;
+}
+.top1_box{
+	width: 132px;
+}
+.top1_box p{
+	margin: 0px;
+	padding: 0px;
+}
+.top1_num1{
+	height: 18px;
+	margin-bottom: 5px !important;
+}
+.top1_num1 span{
+	width: 36px;
+	height: 18px;
+	font-size: 14px;
+	line-height: 18px;
+	color: #FFFFFF;
+	background: #bf2c24;
+	text-align: center;
+	padding: 2px;
+}
+.top1_name{
+	height: 24px;
+	line-height: 24px;
+	font-size: 16px;
+}
+.top1_name a{
+	color: #262626;
+}
+.top1_dialog{
+	padding-top: 3px !important;
+	margin-bottom: 4px !important;
+	height: 24px;
+	color: #bf2c24;
+	font-size: 18px;
+}
+.top1_dialog span{
+	font-size: 12px;
+	margin-left: 3px;
+}
+.top1_author{
+	height: 16px;
+	font-size: 12px;
+	color: #A6A6A6;
+}
+.top1_author a{
+	color: #A6A6A6;
+}
+.top1_img{
+	position: relative;
+	width: 52px;
+	height: 91px;
+	margin-right: 8px;
+  margin-top: 5px;
+	transform: perspective(60px) rotateY(-10deg);
+}
+.top1_img a{
+	position: relative;
+	z-index: 10;
+}
+.top1_img:after{
+	  width: 10%;
+    height: 94%;
+    background: #efefef;
+    content: '';
+    position: absolute;
+    left: 100%;
+    top: 0px;
+    z-index: 2;
+    transform: perspective(60px) rotateY(30deg);
+    box-shadow: inset 0 0 5px #333;
+}
+.top1_img span{
+	  position: absolute;
+    z-index: 1;
+    top: 84.1%;
+    left: 7px;
+    width: 20px;
+    height: 10px;
+    content: '';
+    -webkit-transform: perspective(74px) rotateX(-70deg) rotateY(-5deg);
+    -moz-transform: perspective(74px) rotateX(-70deg) rotateY(-5deg);
+    -ms-transform: scale(0);
+    transform: perspective(74px) rotateX(-70deg) rotateY(-5deg);
+    box-shadow: 25px 0 5px 5px #adadad;
+}
+.top1_img img{
+	width: 52px;
+	height: 87px;
+}
+.topother_num{
+	width: 28px;
+	height: 31px;
+}
+.topother_num .topother_num_2{
+	color: #FFFFFF;
+	background: #e67225;
+}
+.topother_num .topother_num_3{
+	color: #FFFFFF;
+	background: #e6bf25;
+}
+.topother_num span{
+	width: 16px;
+	height: 16px;
+	display: block;
+	margin-top: 8px;
+	text-align: center;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	background: #ededed;
+	color: #666666;
+}
+.topother_name{
+	width: 188px;
+	height: 30px;
+	border-top: 1px solid #E6E6E6;
+	line-height: 31px;
+}
+.topother_name a{
+	width: 116px;
+	display: inline-block;
+	font-size: 14px;
+	color: #1A1A1A;
+} 
+.topother_name span{
+	width: 68px;
+	display: inline-block;
+	color: #b3b3b3;
 }
